--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MontyHall;User=root;Password=niru2000**"
+    "DefaultConnection": "Server=localhost;Database=MontyHall;User=user;Password=password"
   }
 }
